[tool.poetry]
name = "NOO-NAME"
version = "NOO-VERSION"
description = "NOO-DESCRIPTION"
authors = ["NOO-AUTHOR"]
license = "NOO-LICENSE"

[tool.poetry.dependencies]
python = "NOO-PYTHON-VERSION"
taskipy = "^1.10.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
